# ParMeltMantle

./: .gitignore  README.md
driver/: couple.cpp  couple.h  driver.cpp  myplot.py  plot_edge_scalar.m  plot_edge_velocity.m  print.cpp  run.py
driver/full/: CMakeLists.txt  fast.sh  flow.cpp  porosity.cpp
driver/half/: CMakeLists.txt  fast.sh  flow.cpp  porosity.cpp  test.sh
driver/numpy_venv/: pyvenv.cfg
driver/transport/: CMakeLists.txt  build.sh  fast.sh  porosity.cpp  trans.cpp
include/: FEbasis.h  flux.h  flux_multilevel.h  general.h  implicitRK.h  weno.h  weno_multilevel.h
src/.deps/: integral.Po  mesh.Po
src/general/: integral.cpp  integral.h  mesh.c  mesh.h  util.cpp  util.h
src/general/test/: CMakeLists.txt  test.cpp
src/io/: cgns_io.c  cgns_io.h  hdf5_io.cpp  hdf5_io.h  input.cpp  input.h  output.c  output.h  readStencil.cpp  readStencil.h
src/io/Reader/: Makefile  reader.cpp
src/io/test/: CMakeLists.txt  build.sh  test.cpp
src/mfem/: Hdivmixed.cpp  Hdivmixed.h  basis.cpp  basis.h  brmixed.cpp  brmixed.h  myFunc.h  shape.h  shape.tpp
src/mfem/clean/: serial_assemble.cpp  serial_bndry.cpp  serial_locmat.cpp  serial_solver.h  serial_util.cpp
src/mfem/clean/test/: CMakeLists.txt  build.sh  flow.cpp  test.cpp
src/mlweno_array/: error.cpp  error.h  multilevel.cpp  multilevel.h  reconstruction.cpp  reconstruction.h  tensorstencilpoly.cpp  tensorstencilpoly.h
src/mlweno_array/test/: CMakeLists.txt  myplot.m  record  testmultilevel.cpp  testpoly.cpp  testsigma.cpp
src/phase/: eutectic.cpp  eutectic.h  eutectic_rescaled.cpp  eutectic_rescaled.h
src/phase/matlab/: HC.eps  HCProperties.m  PhaseDiagrams.m  eval_phase_behavior.m  phase.eps  physical_properties_eutectic.m  plotTX_diagram.m  plot_HC_diagram.m  plot_HX_diagram.m  plot_NaCl_phase_diagram.m
src/phase/test/: CMakeLists.txt  marc_colors.m  myplot.m  plot_eutectic.m  plotphase.cpp  plotphase_rescale.cpp  run.sh
src/transport/: flux.cpp  lagrange_tmp.cpp  lagrange_tmp.h  print.cpp  transport.cpp  transport.h
